temp/gatekeeper/constraints/00-template-disallow-host-network.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostnetwork
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostNetwork
      validation:
        openAPIV3Schema:
          type: object
          properties: {}
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowhostnetwork

      violation[{"msg": msg}] {
        spec := pod_spec(input.review.object)
        spec.hostNetwork == true
        msg := "hostNetwork must not be true"
      }

      pod_spec(obj) = spec {
        obj.kind == "Pod"
        spec := obj.spec
      }

      pod_spec(obj) = spec {
        spec := obj.spec.template.spec
      }

      pod_spec(obj) = spec {
        spec := obj.spec.jobTemplate.spec.template.spec
      }
