temp/gatekeeper/constraints/10-constraint-max-deployment-replicas.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMaxDeploymentReplicas
metadata:
  name: max-deployment-replicas
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["argocd", "argo-rollouts", "gatekeeper-system", "kube-system", "monitoring"]
    kinds:
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
  parameters:
    maxReplicas: 5
