temp/gatekeeper/constraints/10-constraint-required-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResourceLimits
metadata:
  name: require-cpu-memory-limits
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["argocd", "argo-rollouts", "gatekeeper-system", "kube-system", "monitoring"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    - apiGroups: ["apps"]
      kinds: ["Deployment", "StatefulSet", "DaemonSet", "ReplicaSet"]
    - apiGroups: ["batch"]
      kinds: ["Job", "CronJob"]
    - apiGroups: ["argoproj.io"]
      kinds: ["Rollout"]
  parameters:
    resources: ["cpu", "memory"]
